# python-template

./: LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: README.md
