[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-template"
version = "0.1.0"
description = "A modern Python project template."
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "build>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your/repo"
Issues = "https://github.com/your/repo/issues"

[project.scripts]
python-template = "python_template.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E","F","I","UP","B"]
ignore = []
exclude = ["dist", "build", ".venv"]
fix = true

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=python_template --cov-report=term-missing"
testpaths = ["tests"]
